# naoi

./: .editorconfig  .env.example  .gitignore  404.html  Makefile  README.md  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: docs.yaml  test.yaml
cmd/naoi/: main.go
docs/: conf.py  index.md  reference.md
internal/cmd/: cmd.go  config.go  run.go
internal/pipeline/: config.go  config_test.go  job.go
internal/runner/: container.go  runner.go
naoi/: __init__.py  cli.py  exceptions.py  pipeline.py  runner.py  settings.py
search/: search_index.json
