[tool.poetry]
name = "naoi"
version = "0.1.0"
description = "Lightweight self-hosted CI/CD tool"
authors = ["m5ka <m5ka@posteo.de>"]
license = "BSD 2-Clause"
readme = "README.md"

[tool.poetry.scripts]
naoi = "naoi.cli:naoi"

[tool.poetry.dependencies]
blake3 = "^1.0.0"
click = "^8.1.7"
docker = "^7.1.0"
environs = "^11.2.1"
pydantic = "^2.10.2"
python = "^3.12"
pyyaml = "^6.0.2"
rich = "^13.9.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst_parser = "^4.0"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
sphinx_rtd_theme = "^3.0.2"

[tool.ruff]
include = ["pyproject.toml", "naoi/**/*.py"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
